--- a/app/view/searchBar.html
+++ b/app/view/searchBar.html
@@ -1,8 +1,9 @@
 <div class="search-bar p-2 d-flex justify-content-center">
   <form class="search-bar-form">
-    <input class="input-search" type="text" name="buscarPersonagem" id="buscar" placeholder="Which character are you looking for?">
+    <input ng-model="buscar" class="input-search" type="text" name="buscarPersonagem" id="buscar" placeholder="Which character are you looking for?">
     <button type="submit">
       <i class="fas fa-search"></i>
     </button>
+    
   </form>
 </div>
