--- a/app/css/main.css
+++ b/app/css/main.css
@@ -147,6 +147,77 @@ body, html{
   background-color: white;
 }
 
+.pagination{
+ 
+  background-color: #ec1d24;
+  display: flex;
+  justify-content: center;
+  font-size: 2em;
+  margin: auto;
+  margin-top: 10px;
+  border-radius: 50px;
+
+}
+
+@media (max-width: 500px)
+{
+  .pagination
+   {
+    font-size: 1em;
+   }
+}
+
+.paginate{
+  position: absolute;
+  bottom: 70px;
+}
+
+.pagination li a{
+  text-decoration: none;
+  color: white;
+  
+}
+
+.pagination li{
+  padding: 0 10px;
+}
+
+.pagination li.active{
+  background-color: rgb(95, 0, 0);
+}
+
+.overlay-spinner{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-spinner div{
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+}
+
+.overlay-spinner div img{
+  max-width: 250px;
+}
+
+.spinner-border{
+  display: inline-block;
+  width: 5rem;
+  height: 5rem;
+  vertical-align: -0.125em;
+  border: 1.25em solid #ec1d24;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: .75s linear infinite spinner-border;
+  animation: .75s linear infinite spinner-border;
+}
+
+
+
 /* scrollbar */
 
 ::-webkit-scrollbar {
